# n-gram

./: README.md  ngrams.cabal
app/: Main.hs
src/: Ngrams.hs  TextUtils.hs
