name:                ngrams
version:             0.1.0.0
synopsis:            Command line tool for text frequency analysis
description:         Please see README.md
homepage:            https://github.com/vergilijus/n-gram
license:             BSD3
license-file:        LICENSE
author:              vergilijus
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ngrams
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable ngrams-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , ngrams
                     , containers
  default-language:    Haskell2010

test-suite ngrams-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ngrams
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vergilijus/n-gram
